Renamed the Link Names

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -30,15 +30,15 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li ui-sref-active="active" ><a ui-sref="employee" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
-                        &#xA0;<span >employee</span></a></li>
+                        &#xA0;<span >Employee</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="employeeAllocation" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
-                        &#xA0;<span >employeeAllocation</span></a></li>
+                        &#xA0;<span >EmployeeAllocation</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="rOLE_TARIFF" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
-                        &#xA0;<span >rOLE_TARIFF</span></a></li>
+                        &#xA0;<span >RolesTariff</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="codeValues" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
-                        &#xA0;<span >codeValues</span></a></li>
+                        &#xA0;<span >CodeValues</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="holidays" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
-                        &#xA0;<span >holidays</span></a></li>
+                        &#xA0;<span >Holidays</span></a></li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
