--- a/src/main/webapp/assets/styles/main.css
+++ b/src/main/webapp/assets/styles/main.css
@@ -199,4 +199,11 @@ ul#strengthBar {
     opacity: 1;
 }
 
+.form-group.required .control-label:after { 
+   content:"*";
+   color:red;
+   padding-left: 2px;
+   font-size: 120%;
+}
+
 /* jhipster-needle-css-add-main JHipster will add new css style */
