--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -40,9 +40,9 @@
                         <li ui-sref-active="active" ><a ui-sref="holidays" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span >Holidays</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="employeeBillingHours" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
-                        &#xA0;<span >employeeBillingHours</span></a></li>
+                        &#xA0;<span >Employee Billing Hours</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="employeeHolidays" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
-                        &#xA0;<span >employeeHolidays</span></a></li>
+                        &#xA0;<span >Employee Holidays</span></a></li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
