* only Admin will have access to following entities:  - Code Values, Employees, Employee Allocation, Holidays, Role Tariff

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -29,15 +29,15 @@
                         </span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li ui-sref-active="active" ><a ui-sref="employee" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        <li ui-sref-active="active" has-authority="ROLE_ADMIN"><a ui-sref="employee" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span >Employee</span></a></li>
-                        <li ui-sref-active="active" ><a ui-sref="employeeAllocation" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        <li ui-sref-active="active" has-authority="ROLE_ADMIN"><a ui-sref="employeeAllocation" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span >EmployeeAllocation</span></a></li>
-                        <li ui-sref-active="active" ><a ui-sref="rOLE_TARIFF" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        <li ui-sref-active="active" has-authority="ROLE_ADMIN"><a ui-sref="rOLE_TARIFF" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span >RolesTariff</span></a></li>
-                        <li ui-sref-active="active" ><a ui-sref="codeValues" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        <li ui-sref-active="active" has-authority="ROLE_ADMIN"><a ui-sref="codeValues" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span >CodeValues</span></a></li>
-                        <li ui-sref-active="active" ><a ui-sref="holidays" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        <li ui-sref-active="active" has-authority="ROLE_ADMIN"><a ui-sref="holidays" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span >Holidays</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="employeeBillingHours" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span >Employee Billing Hours</span></a></li>
