* display the name of the user in the navbar

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -51,7 +51,7 @@
                         <span>
                             <span class="glyphicon glyphicon-user"></span>
                             <span class="hidden-sm">
-                                Account
+                                {{user.firstName}} {{user.lastName}}
                             </span>
                             <b class="caret"></b>
                         </span>
