* Added the 'Employee Hours Administration' screen

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -41,6 +41,8 @@
                         &#xA0;<span >Holidays</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="employeeHours" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span >Employee Hours</span></a></li>
+                        <li ui-sref-active="active" has-authority="ROLE_ADMIN"><a ui-sref="employeeHoursAdmin" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span >Employee Hours Administration</span></a></li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
